<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Замерщик "Эталон"</string>
    <string name="app_name_d">программа для оформления замеров</string>
    <string name="app_drafts">Чертежи замера</string>
    <string name="app_refresh">Обновить данные</string>
    <string name="app_synhronized">Синхронизировать</string>
    <string name="app_add">Добавить</string>
    <string name="app_clone">Клонировать</string>
    <string name="app_edit">Изменить</string>
    <string name="app_delete">Удалить</string>
    <string name="app_clear_measurements">Очистить журнал замеров</string>
    <string name="app_clean">Очистить</string>
    <string name="app_draft">Чертёж</string>
    <string name="app_filters">Фильтры:</string>
    <string name="app_count_m">Замеров:</string>
    <string name="app_today">Сегодня</string>
    <string name="app_outstanding">Невыполненные</string>
    <string name="app_empty_int">0</string>
    <string name="app_logout">Выйти из аккаунта</string>
    <string name="app_auth">Войти или создать аккаунт</string>
    <string name="app_empty_info">У Вас пока нет заявок на замеры!\nДля создания новой заявки используйте клавишу [Добавить].</string>    
    <string name="lbl_name">Наименование</string>
    <string name="btn_note">Примечание</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_reg_account">Зарегистрировать</string>
    <string name="lbl_note">Примечание</string>
    <string name="auth_name_account">Наименование аккаунта</string>
    <string name="authorization">Авторизация</string>
    <string name="account">Аккаунт</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти в аккаунт</string>
    <string name="Registration">Регистрация аккаунта</string>
    <string name="AfterRegistration">после регистрации на Ваш почтовый ящик будет выслан пароль от аккаунта</string>
    <string name="email">Email</string>
    <string name="registration">регистрация</string>
    <string name="info">информация</string>
    <string name="advantages">Узнать о преимуществах использования аккаунта Вы можете посетив сайт: http://etalon5.ru</string>
    <string name="regInfo">Если у Вас ещё нет аккаунта, Вы можете его создать:</string>
    <string name="cardMeasure">Карточка замера</string>
    <string name="regMeasure">Регистрация заказа на замер</string>
    <string name="companyName">БПР "Эталон"</string>
    <string name="companyNameURL">Сайт продукта: http://etalon5.ru</string>
    <string name="customer_measure">Заказчик замера</string>
    <string name="customer_phones">Телефоны заказчика</string>
    <string name="measure_address">Адрес замера</string>
    <string name="measure_date">Дата замера</string>
    <string name="measure_time">Желаемое время</string>
    <string name="measure_objects">Объекты замера</string>
    <string name="measure_note">Примечание замера</string>
    <string name="select">Выбрать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
    <string name="bindGrid">Привязка к сетке</string>
    <string name="bindObjects">Привязка к элементам</string>
    <string name="background">Фон:</string>    
    <string name="white">Белый</string>
    <string name="black">Черный</string>
    <string name="settingsDraft">Настройки</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="app_templates">Шаблоны</string>
    <string name="save_as_template">Сохранить как шаблон</string>
    <string name="applyClone">Подтверждение операции</string>
    <string name="isCreateClone">Создать дубликат текущего чертежа?</string>
    <string name="yes">Да</string>
    <string name="no">нет</string>
    <string name="name_template">Наименование шаблона</string>
    <string name="storedTemplate">Сохранение шаблона</string>
    <string name="templates">Шаблоны чертежей</string>
    <string name="app_select">Выбрать</string>
    <string name="rename_template">Переименование шаблон</string>
    <string name="aply_deleted">Подтверждение удаления</string>
    <string name="to_temove_template">Удалить шаблон: </string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="new_template">Новый шаблон</string>
    <string name="app_ready">Готово</string>
    <string name="creation_template">Создание шаблона</string>
    <string name="enter_the_name">Введите наименование</string>
    <string name="enter_the_field_name">Заполните поле наименование шаблона</string>


</resources>