<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.dm59.mobilemeasurer.MainActivity">


	<item
        android:id="@+id/action_addMeasure"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always|withText"
        android:title="@string/app_add"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_synhro"
        app:showAsAction="always|withText"
        android:title="@string/app_synhronized"/>
	<item
        android:id="@+id/action_auth"
        android:icon="@drawable/ic_action_auth"
        app:showAsAction="ifRoom"
        android:title="@string/app_auth"/>
    <item
        android:id="@+id/action_tempaltesDraft"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_templates"
        android:title="@string/app_templates"/>
	<item
        android:id="@+id/action_deleteAll"
        app:showAsAction="never"
        android:title="@string/app_clear_measurements"/>
    <item
        android:id="@+id/action_logout"
        app:showAsAction="never"
        android:title="@string/app_logout"/>
</menu>
