<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkBoxBingGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:checked="true"
        android:text="@string/bindGrid" />

    <CheckBox
        android:id="@+id/checkBoxBindObjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:checked="true"
        android:text="@string/bindObjects" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/background" />

        <RadioGroup
            android:id="@+id/radioGroupBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >
	        
	        <RadioButton
	            android:id="@+id/radioButtonWhiteBackground"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:checked="true"
	            android:text="@string/white" />
	
	        <RadioButton
	            android:id="@+id/radioButtonBlackBackground"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:text="@string/black" />
	        
        </RadioGroup>
        
    </LinearLayout>

    <Button
        android:id="@+id/buttonDraftSettingsOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok" />
                
</LinearLayout>
