<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".AuthActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/authorization"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#4F4F4F"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >    

	    <TextView
	        android:id="@+id/textViewAdvantages"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:autoLink="web"
	        android:gravity="center_horizontal"
	        android:text="@string/advantages"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
			    
	 </LinearLayout>    
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >    

	    <TextView
	        android:id="@+id/textViewRegInfo"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:paddingRight="10dp"
	        android:text="@string/regInfo"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
		<Button
		    android:id="@+id/buttonRegistation"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"		    
		    android:minHeight="24dip"
		    android:text="@string/registration" />
			    
	 </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextNameAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/account"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:minHeight="50dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:minHeight="50dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge" >

        </EditText>
            
       <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"        
        android:columnCount="2"
        android:orientation="horizontal" >
             
		   <Button
		       android:id="@+id/buttonEnter"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_gravity="center_horizontal|left"
		       android:minHeight="60dp"
		       android:text="@string/enter" />

		   <ProgressBar
		       android:id="@+id/progressBarAuth"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:visibility="invisible" />
		   
	    </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textViewCompanyNameURL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:autoLink="web"
            android:gravity="bottom"
            android:text="@string/companyNameURL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>