<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="beginning" >

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:showDividers="beginning"
        style="@android:style/Theme.Panel"
        android:visibility="gone" >

    <CheckBox
        android:id="@+id/checkBoxOutstanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/app_outstanding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewLabelCountMeasures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/app_count_m"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewInfoCountMeasures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/app_empty_int"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"  >

    <TextView
        android:id="@+id/textViewEmptyMeasures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/app_empty_info"
        android:textAlignment="center"
        android:visibility="visible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>