<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".RegActivity" >

    <TextView
        android:id="@+id/textViewRegTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/Registration"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#4F4F4F"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewAfterRegInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/AfterRegistration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextNameRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:minHeight="50dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="32sp" >

            <requestFocus />
        </EditText>
            
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonRegEnter"                
                android:layout_height="wrap_content"                
                android:layout_gravity="center_horizontal|left"
		       	android:minHeight="60dp"
                android:text="@string/btn_reg_account" />

            <ProgressBar
                android:id="@+id/progressBarReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </GridLayout>
        
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textViewRegCompanyNameURL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:autoLink="web"
            android:gravity="bottom"
            android:text="@string/companyNameURL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>