<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewCardMeasure"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextCustomer"
            android:text="@string/customer_measure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="255"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewCustomerPhones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextCustomerPhones"
            android:text="@string/customer_phones"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCustomerPhones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="fill"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="100"
            android:singleLine="true" />

        <TextView
            android:id="@+id/TextViewMeasureAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextMeasureAddress"
            android:text="@string/measure_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextMeasureAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:maxLength="500"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textViewDateMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextMeasureDate"
            android:text="@string/measure_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonDateMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select" />

            <TextView
                android:id="@+id/textViewDateMeasureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewDesirableTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextDesirableTime"
            android:text="@string/measure_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextDesirableTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="500"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textViewMeasureObject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextMeasureObject"
            android:text="@string/measure_objects"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextMeasureObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|fill"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textViewMeasureNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:labelFor="@+id/editTextMeasureNote"
            android:text="@string/measure_note"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextMeasureNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="top|left"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonSaveMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:text="@string/save"
            android:minWidth="250dp"
            android:minHeight="60dp" />
    
    </LinearLayout>

</ScrollView>

